--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
----
-layout: default
-title: Home
----
-
-<div class="container">
-  <img src="https://avatars.githubusercontent.com/u/162877035?v=4" class="propic" />
-  </br>
-  <p style="text-align: center;">Hi. I am Felix Patryjas, a german student.
-  </p>
-</div>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mein Profil</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            padding: 50px;
+        }
+        .profile-image {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            margin-bottom: 20px;
+        }
+        .social-links a {
+            margin: 0 10px;
+            text-decoration: none;
+            color: #0077b5; /* Change color to match your branding */
+        }
+        .social-links a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <img src="https://avatars.githubusercontent.com/u/162877035?v=4" alt="Profilbild" class="profile-image">
+        <h1>Felix Patryjas (@schwienernitzel)</h1>
+        <p>Hello, and welcome to by blog! I am Felix Patryjas, a german student and hobby developer.</p>
+        <div class="social-links">
+          <!--  <a href="https://twitter.com/dein_username" target="_blank">Twitter</a>
+            <a href="https://linkedin.com/in/dein_username" target="_blank">LinkedIn</a>
+            <a href="https://instagram.com/dein_username" target="_blank">Instagram</a> -->
+        </div>
+    </div>
+</body>
+</html>
