--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mein Profil</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+        
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         .container {
             padding: 50px;
+            flex: 1;
         }
         .profile-image {
             width: 150px;
@@ -21,13 +28,32 @@
             border-radius: 50%;
             margin-bottom: 20px;
         }
+        .footer {
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
+            width: 100%;
+            position: fixed;
+            bottom: 0;
+        }
+        .social-links {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 10px 0;
+        }
         .social-links a {
             margin: 0 10px;
             text-decoration: none;
-            color: #0077b5; /* Change color to match your branding */
+            color: #ffffff;
+            display: flex;
+            align-items: center;
         }
         .social-links a:hover {
             text-decoration: underline;
+        }
+        .social-links i {
+            margin-right: 5px;
         }
     </style>
 </head>
@@ -35,11 +61,22 @@
     <div class="container">
         <img src="https://avatars.githubusercontent.com/u/162877035?v=4" alt="Profilbild" class="profile-image">
         <h1>Felix Patryjas (@schwienernitzel)</h1>
-        <p>Hello, and welcome to by blog! I am Felix Patryjas, a german student and hobby developer.</p>
+        <p>Hello, and welcome to my blog! I am Felix Patryjas, a German student and hobby developer.</p>
+    </div>
+    <div class="footer">
         <div class="social-links">
-          <!--  <a href="https://twitter.com/dein_username" target="_blank">Twitter</a>
-            <a href="https://linkedin.com/in/dein_username" target="_blank">LinkedIn</a>
-            <a href="https://instagram.com/dein_username" target="_blank">Instagram</a> -->
+            <a href="https://x.com/schwienernitzel" target="_blank">
+                <i class="fab fa-twitter"></i>X
+            </a>
+            <a href="https://github.com/schwienernitzel" target="_blank">
+                <i class="fab fa-github"></i>GitHub
+            </a>
+            <a href="https://t.me/schwienernitzel" target="_blank">
+                <i class="fab fa-telegram"></i>Telegram
+            </a>
+            <a href="https://xdaforums.com/m/schwienernitzel.12806033/" target="_blank">
+                <i class="fas fa-question-circle"></i>XDA-Developers
+            </a>
         </div>
     </div>
 </body>
