index: Import XDA logo

--- a/index.html
+++ b/index.html
@@ -55,13 +55,17 @@
         .social-links i {
             margin-right: 5px;
         }
+        .social-links img {
+            width: 24px; /* Anpassen der Größe, falls erforderlich */
+            height: 24px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <img src="https://avatars.githubusercontent.com/u/162877035?v=4" alt="Profilbild" class="profile-image">
         <h1>Felix Patryjas (@schwienernitzel)</h1>
-        <p>Hello, and welcome to my blog! I am Felix Patryjas, a German student and hobby developer.</p>
+        <p>Hallo und willkommen auf meinem Blog! Ich bin Felix Patryjas, ein deutscher Student und Hobby-Entwickler.</p>
     </div>
     <div class="footer">
         <div class="social-links">
@@ -75,7 +79,7 @@
                 <i class="fab fa-telegram"></i>Telegram
             </a>
             <a href="https://xdaforums.com/m/schwienernitzel.12806033/" target="_blank">
-                <i class="fas fa-question-circle"></i>XDA-Developers
+                <img src="logos/xda.png"></i>XDA-Developers
             </a>
         </div>
     </div>
