--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             margin-right: 5px;
         }
         .social-links img {
-            width: 24px; /* Anpassen der Größe, falls erforderlich */
+            width: 24px;
             height: 24px;
         }
     </style>
@@ -65,7 +65,7 @@
     <div class="container">
         <img src="https://avatars.githubusercontent.com/u/162877035?v=4" alt="Profilbild" class="profile-image">
         <h1>Felix Patryjas (@schwienernitzel)</h1>
-        <p>Hallo und willkommen auf meinem Blog! Ich bin Felix Patryjas, ein deutscher Student und Hobby-Entwickler.</p>
+        <p>Hello, and welcome to my blog! I am Felix Patryjas, a German student and hobby developer.</p>
     </div>
     <div class="footer">
         <div class="social-links">
