--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="container">
         <img src="https://avatars.githubusercontent.com/u/162877035?v=4" alt="Profilbild" class="profile-image">
         <h1>Felix Patryjas (@schwienernitzel)</h1>
-        <p>Hello, and welcome to my blog! I am Felix Patryjas, a German student and hobby developer.</p>
+        <p>Hello, and welcome to my blog! I am Felix Patryjas, 20 years old, a German student and a hobby software engineer.</p>
     </div>
     <div class="footer">
         <div class="social-links">
