--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Profilseite von Felix Patryjas, einem deutschen Studenten und Hobby-Softwareentwickler.">
     <title>Mein Profil</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:wght@700&display=swap');
         
         body {
             font-family: Arial, sans-serif;
@@ -34,12 +35,14 @@
         }
         .profile-name {
             color: purple;
-            font-family: 'Roboto', sans-serif;
+            font-family: 'Montserrat', sans-serif;
             font-size: 20px;
-            margin-bottom: 20px;
+            font-weight: 700;
+            margin-bottom: 10px;
+            text-transform: uppercase;
         }
         .console {
-            background-color: #2b2b2b;
+            background-color: rgba(43, 43, 43, 0.8);
             color: #ffffff;
             padding: 20px;
             border-radius: 10px;
@@ -52,9 +55,9 @@
         }
         .console-line {
             margin: 5px 0;
-            color: green;
+            color: #ffffff;
             font-family: 'Roboto', sans-serif;
-            text-shadow: 0 0 10px rgba(0, 255, 0, 0.7);
+            text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
         .footer {
             background-color: #333;
@@ -100,14 +103,37 @@
             margin-left: 10px;
             outline: none;
         }
+
+        @media (max-width: 600px) {
+            .container {
+                padding: 20px;
+            }
+            .profile-name {
+                font-size: 18px;
+            }
+            .console {
+                max-height: 200px;
+                padding: 10px;
+            }
+            .footer {
+                padding: 5px 0;
+            }
+            .social-links a {
+                margin: 0 5px;
+            }
+            .social-links img {
+                width: 20px;
+                height: 20px;
+            }
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="https://avatars.githubusercontent.com/u/162877035?v=4" alt="Profilbild" class="profile-image">
         <div class="profile-name">Felix Patryjas (@schwienernitzel)</div>
+        <img src="https://avatars.githubusercontent.com/u/162877035?v=4" alt="Profilbild" class="profile-image">
         <div class="console" id="console">
-            <div class="console-line">Run 'whoami' for further information.</div>
+            <div class="console-line">Welcome! Run <em>whoami</em> for further information.</div>
             <div class="console-line" id="output-line"></div>
             <div id="input-line">
                 <span>$ </span><input id="user-input" type="text" autofocus>
@@ -116,19 +142,22 @@
     </div>
     <div class="footer">
         <div class="social-links">
-            <a href="https://x.com/schwienernitzel" target="_blank">
+            <a href="https://x.com/schwienernitzel" target="_blank" aria-label="Twitter">
                 <i class="fab fa-twitter"></i>X
             </a>
-            <a href="https://github.com/schwienernitzel" target="_blank">
+            <a href="https://github.com/schwienernitzel" target="_blank" aria-label="GitHub">
                 <i class="fab fa-github"></i>GitHub
             </a>
-            <a href="https://t.me/schwienernitzel" target="_blank">
+            <a href="https://t.me/schwienernitzel" target="_blank" aria-label="Telegram">
                 <i class="fab fa-telegram"></i>Telegram
             </a>
-            <a href="https://xdaforums.com/m/schwienernitzel.12806033/" target="_blank">
-                <img src="logos/xda.png">XDA-Developers
+            <a href="https://xdaforums.com/m/schwienernitzel.12806033/" target="_blank" aria-label="XDA-Developers">
+                <img src="logos/xda.png" alt="XDA Developers">XDA-Developers
             </a>
         </div>
+    </div>
+    <div class="container">
+        <div class="profile-name">Copyright © 2024</div>
     </div>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
@@ -142,6 +171,7 @@
                 if (i < text.length) {
                     outputLine.innerHTML += text.charAt(i);
                     i++;
+                    consoleElement.scrollTop = consoleElement.scrollHeight;
                     setTimeout(function() { typeWriter(text, i, cb); }, 50);
                 } else {
                     cb();
