--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Profilseite von Felix Patryjas, einem deutschen Studenten und Hobby-Softwareentwickler.">
+    <meta name="author" content="Felix Patryjas">
+    <meta name="keywords" content="Felix Patryjas, Softwareentwickler, Student, Deutschland">
     <title>Mein Profil</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -32,6 +34,7 @@
             height: 150px;
             border-radius: 50%;
             margin-bottom: 10px;
+            object-fit: cover;
         }
         .profile-name {
             color: purple;
@@ -131,9 +134,9 @@
 <body>
     <div class="container">
         <div class="profile-name">Felix Patryjas (@schwienernitzel)</div>
-        <img src="https://avatars.githubusercontent.com/u/162877035?v=4" alt="Profilbild" class="profile-image">
+        <img src="https://avatars.githubusercontent.com/u/162877035?v=4" alt="Profilbild von Felix Patryjas" class="profile-image">
         <div class="console" id="console">
-            <div class="console-line">Welcome! Run <em>whoami</em> for further information.</div>
+            <div class="console-line"><span style="color: green;">schwiener@nitzel</span><span>:<span style="color: lightblue;">~</span><span style="color: grey;">$</span></span> Welcome! Run <em>whoami</em> for further information.</div>
             <div class="console-line" id="output-line"></div>
             <div id="input-line">
                 <span>$ </span><input id="user-input" type="text" autofocus>
@@ -202,32 +205,30 @@
                 var input = userInput.value.trim();
                 userInput.value = '';
 
-            if (input === 'whoami') {
-                var messages = [
-                    '$ Hello, and welcome to my blog!',
-                    '$ I am Felix Patryjas, 20 years old, a German student and a hobby software engineer.'
-                ];
-                simulateConsoleOutput(messages, function() {
-                    userInput.focus();
-                });
-             }  
-             else if (input === 'clear') {
-                clearConsole();
-             }  
-             else {
-                var errorMessage = '$ Command not recognized: ' + input;
-                simulateConsoleOutput([errorMessage], function() {
-                    userInput.focus();
+                if (input === 'whoami') {
+                    var messages = [
+                        '$ Hello, and welcome to my blog!',
+                        '$ I am Felix Patryjas, 20 years old, a German student and a hobby software engineer.'
+                    ];
+                    simulateConsoleOutput(messages, function() {
+                        userInput.focus();
+                    });
+                } else if (input === 'clear') {
+                    clearConsole();
+                } else {
+                    var errorMessage = '$ Command not recognized: ' + input;
+                    simulateConsoleOutput([errorMessage], function() {
+                        userInput.focus();
                     });
                 }
-             }
+            }
             
-             userInput.addEventListener('keydown', function(event) {
-                 if (event.key === 'Enter') {
-                     processUserInput();
-                 }
-             });
-           });
-        </script>
-    </body>
+            userInput.addEventListener('keydown', function(event) {
+                if (event.key === 'Enter') {
+                    processUserInput();
+                }
+            });
+        });
+    </script>
+</body>
 </html>
