--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Profilseite von Felix Patryjas, einem deutschen Studenten und Hobby-Softwareentwickler.">
     <meta name="author" content="Felix Patryjas">
     <meta name="keywords" content="Felix Patryjas, Softwareentwickler, Student, Deutschland">
-    <title>Mein Profil</title>
+    <title>schwiener@nitzel</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:wght@700&display=swap');
@@ -57,7 +57,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
         .console-line {
-            margin: 5px 0;
+            
             color: #ffffff;
             font-family: 'Roboto', sans-serif;
             text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -94,7 +94,20 @@
             height: 24px;
         }
         #input-line {
+            display: flex;
+            align-items: center;
             margin-top: 10px;
+            font-family: 'Roboto', sans-serif;
+            text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        }
+        #input-line span {
+            color: green;
+        }
+        #input-line .path {
+            color: lightblue;
+        }
+        #input-line .dollar {
+            color: grey;
         }
         #input-line input {
             background-color: transparent;
@@ -102,9 +115,9 @@
             color: white;
             font-family: 'Roboto', sans-serif;
             font-size: 16px;
-            width: 90%;
-            margin-left: 10px;
+            margin-left: 5px;
             outline: none;
+            flex: 1;
         }
 
         @media (max-width: 600px) {
@@ -134,12 +147,13 @@
 <body>
     <div class="container">
         <div class="profile-name">Felix Patryjas (@schwienernitzel)</div>
-        <img src="https://avatars.githubusercontent.com/u/162877035?v=4" alt="Profilbild von Felix Patryjas" class="profile-image">
+        <img src="https://avatars.githubusercontent.com/u/162877035?v=4" alt="Felix Patryjas' profile picture" class="profile-image">
         <div class="console" id="console">
             <div class="console-line"><span style="color: green;">schwiener@nitzel</span><span>:<span style="color: lightblue;">~</span><span style="color: grey;">$</span></span> Welcome! Run <em>whoami</em> for further information.</div>
             <div class="console-line" id="output-line"></div>
             <div id="input-line">
-                <span>$ </span><input id="user-input" type="text" autofocus>
+                <span style="color: green;">schwiener@nitzel</span>:<span class="path">~</span><span class="dollar">$</span>
+                <input id="user-input" type="text" autofocus>
             </div>
         </div>
     </div>
@@ -163,7 +177,7 @@
         <div class="profile-name">Copyright © 2024</div>
     </div>
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
+      document.addEventListener('DOMContentLoaded', function() {
             var consoleElement = document.getElementById('console');
             var outputLine = document.getElementById('output-line');
             var userInput = document.getElementById('user-input');
@@ -230,5 +244,5 @@
             });
         });
     </script>
-</body>
+  </body>
 </html>
