--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="description" content="Profilseite von Felix Patryjas, einem deutschen Studenten und Hobby-Softwareentwickler.">
     <meta name="author" content="Felix Patryjas">
     <meta name="keywords" content="Felix Patryjas, Softwareentwickler, Student, Deutschland">
-    <title>schwiener@nitzel</title>
+    <title>schwiener@nitzel - $HOME</title>
+    <link rel="icon" href="logos/avatar.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:wght@700&display=swap');
